# chat-bot

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  run.py
app/: main.py
app/api/: deps.py  http.py
app/api/v1/: admin.py  autocomplete.py  chat.py  feedback.py  health.py  sessions.py
app/autocomplete/: suggester.py
app/core/: config.py  exceptions.py  logging.py
app/db/: postgres.py  redis_client.py  repositories.py
app/llm/: cli_client.py  client.py  models.py
app/mcp/: client.py  domain_client.py  faq_client.py  tool_catalog.py
app/memory/: short_term.py
app/orchestration/: graph.py  prompts.py  state.py
app/orchestration/nodes/: faq.py  generate.py  rewrite.py  route.py  tool_select.py  verify.py
app/retrieval/: embedder.py  hybrid.py  reranker.py  tool_retriever.py  vector_store.py
app/schemas/: autocomplete.py  chat.py
app/services/: admin_service.py  autocomplete_service.py  chat_service.py
app/tenancy/: registry.py  router.py
configs/: tenants.yaml
docs/: 01_아키텍처_설계서.md  02_백엔드_패키지구조.md  03_API명세서.md  04_DB설계서.md  05_개발기획서.md  06_LLM_프롬프트_설계서.md  07_RAG_인덱싱_설계서.md  08_MCP_서버_명세서.md  09_멀티테넌시_업체온보딩_가이드.md  10_보안_권한_데이터격리_설계서.md  11_평가_테스트_전략서.md  12_구현_아키텍처.md  13_복합질의_도구호출_이슈_분석.md
embedding-server/: pyproject.toml  run.py
embedding-server/app/: main.py
faq-bunsik/: .env.example  README.md  pyproject.toml
faq-bunsik/app/: config.py  ingest.py  matcher.py  vector_store.py
faq-chicken/: .env.example  README.md  pyproject.toml
faq-chicken/app/: config.py  embedder.py  ingest.py  matcher.py
faq-chinese/: .env.example  README.md  pyproject.toml  run.py
faq-chinese/app/: config.py  mcp_server.py
faq-pizza/: .env.example  .gitignore  README.md  pyproject.toml
faq-pizza/app/: config.py  embedder.py  main.py
general-bunsik/: .env.example  README.md  pyproject.toml
general-bunsik/app/: config.py  seed_data.py
general-chicken/: .env.example  README.md  pyproject.toml
general-chicken/app/: config.py  ingest.py  main.py  seed_data.py
general-chinese/: .env.example  README.md  pyproject.toml
general-chinese/app/: config.py  embedder.py  mcp_server.py  search.py  seed_data.py  vector_store.py
general-pizza/: .env.example  README.md  pyproject.toml  run.py
general-pizza/app/: backend_client.py  chunking.py  config.py  embedder.py  ingest.py  mcp_server.py  responses.py  search.py  seed_data.py
indexing/: chunking.py  pipeline.py  question_gen.py
indexing/parsers/: __init__.py
mcp_servers/_shared/: responses.py  seed_data.py  server_factory.py  tooling.py
mcp_servers/faq_template/: config.example.yaml  matcher.py  server.py
mcp_servers/general/: server.py
pizza-backend/: .gitignore  README.md  pyproject.toml  run.py
pizza-backend/app/: db.py  main.py
scripts/: index_tools.py  init_db.py  run_external_servers.py  run_faq_servers.py  run_mcp_servers.py  schema.sql  seed_demo.py  setup_venvs.py
tests/: conftest.py
tests/integration/: test_api.py
tests/unit/: test_chunking.py  test_embedder.py  test_routing.py  test_tenancy.py  test_tools.py
(+12 files in other folders)
