[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "chatbot-backend"
version = "0.1.0"
description = "멀티테넌트 RAG 챗봇 백엔드 (FastAPI)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "psycopg[binary,pool]>=3.1",
    "redis>=5.0",
    "qdrant-client>=1.7",
    "anthropic>=0.39",
    "langgraph>=0.2",
    "mcp>=1.2",
    "pyyaml>=6.0",
    "rank-bm25>=0.2",
]

[project.optional-dependencies]
dev = ["pytest>=7", "pytest-asyncio>=0.23", "httpx>=0.27"]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
