[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "embedding-server"
version = "0.1.0"
description = "중앙 임베딩 서버 (FastAPI + fastembed) — 임베딩 일관성/경량 클라이언트"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "fastembed>=0.3",
]

[tool.setuptools.packages.find]
include = ["app*"]
