[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "faq-pizza"
version = "0.1.0"
description = "피자집 FAQ MCP 서버 (FastAPI + FastMCP) — 독립 배포"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "mcp>=1.2",
    "qdrant-client>=1.7",
]

[project.optional-dependencies]
# 실제 임베딩(로컬 ONNX, API 키 불필요). EMBEDDING_BACKEND=fastembed 일 때 필요.
fastembed = ["fastembed>=0.3"]

[tool.setuptools.packages.find]
include = ["app*"]
