[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "pizza-backend"
version = "0.1.0"
description = "피자집 백엔드 API (FastAPI + SQLite) — 업체 서비스 데이터 SSOT"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "psycopg[binary]>=3.1",
]

[tool.setuptools.packages.find]
include = ["app*"]
